--- a/remove-tag-html/popup.html
+++ b/remove-tag-html/popup.html
@@ -4,6 +4,12 @@
     <link rel="stylesheet" href="button.css">
   </head>
   <body>
-    <button id="changeColor"></button>
+    Class: <input type="text" id="class-name" name="class-name">
+    <br/>
+    Id: <input type="text" id="id-name" name="id-name">
+    <br/>
+    <button id="add">Remove</button>
+    <button id="reset">Reset</button>
+    <script src="popup.js"></script>
   </body>
 </html>
